Add a button next to restore and close when right clicking on a task bar item to add the item to the programs menu. Don't add blank titled windows to the task bar either, you can't select them, and they really shouldn't be shown (for things that need to be running, but arn't used by the user all the time).

--- a/code/Cairo Desktop/Cairo.WindowsHooksWrapper/Cairo.WindowsHooksWrapper.csproj
+++ b/code/Cairo Desktop/Cairo.WindowsHooksWrapper/Cairo.WindowsHooksWrapper.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Delegates.cs" />
     <Compile Include="InteropCalls.cs" />
     <Compile Include="IWindowsHooksWrapper.cs" />
+    <Compile Include="NativeWindowFilePath.cs" />
     <Compile Include="NIM.cs" />
     <Compile Include="NOTIFYICONDATA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
