--- a/code/Cairo Desktop/Cairo Desktop/Cairo Desktop.csproj
+++ b/code/Cairo Desktop/Cairo Desktop/Cairo Desktop.csproj
@@ -385,6 +385,7 @@
     </None>
     <Resource Include="Resources\controlsBrowse.png" />
     <Resource Include="Resources\folderIcon.png" />
+    <Resource Include="Resources\switchToDesktop.png" />
     <Content Include="SearchAPILib.dll" />
   </ItemGroup>
   <ItemGroup>
