--- a/code/Cairo Desktop/Cairo Desktop/Properties/Settings.settings
+++ b/code/Cairo Desktop/Cairo Desktop/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="EnableSubDirs" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ShowAppNameOnTaskbar" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
