--- a/code/Cairo Desktop/Cairo Desktop/app.config
+++ b/code/Cairo Desktop/Cairo Desktop/app.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="CairoDesktop.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="CairoDesktop.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
       <!--<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />-->
     </configSections>
@@ -47,6 +47,9 @@
             <setting name="EnableSubDirs" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ShowAppNameOnTaskbar" serializeAs="String">
+                <value>False</value>
+            </setting>
         </CairoDesktop.Properties.Settings>
     </userSettings>
   <runtime>
@@ -86,4 +89,4 @@
     </rules>
   </nlog>-->
 
-</configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
