--- a/code/Cairo Desktop/CairoDesktop.AppGrabber/CairoDesktop.AppGrabber.csproj
+++ b/code/Cairo Desktop/CairoDesktop.AppGrabber/CairoDesktop.AppGrabber.csproj
@@ -19,6 +19,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
