--- a/code/Cairo Desktop/Cairo Explorer/app.config
+++ b/code/Cairo Desktop/Cairo Explorer/app.config
@@ -2,6 +2,7 @@
 <configuration>
   <runtime>
     <generatePublisherEvidence enabled="false"/>
-    <supportedRuntime version="v4.0"/>
+    <supportedRuntime version="v3.5"/>
+    <loadFromRemoteSources enabled="true"/>
   </runtime>
 <startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
