--- a/code/Cairo Desktop/Cairo Explorer/app.config
+++ b/code/Cairo Desktop/Cairo Explorer/app.config
@@ -5,4 +5,4 @@
     <supportedRuntime version="v3.5"/>
     <loadFromRemoteSources enabled="true"/>
   </runtime>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
